objects/tdc_cti__Caller_List_Entries__c/tdc_cti__Caller_List_Entries__c.object-meta.xml
<CustomObject>
    <label>Caller List Entry</label>
    <nameField>
        <label>Caller List Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caller List Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>