objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Call_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Status__c</fullName>
    <description>This field is used to store the status of the Call.</description>
    <label>Call Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>