objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Caller_List__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Caller_List__c</fullName>
    <description>This field is used to store the related Caller List.</description>
    <label>Caller List</label>
    <referenceTo>tdc_cti__Caller_List__c</referenceTo>
    <relationshipLabel>Caller List Entries</relationshipLabel>
    <relationshipName>Caller_List_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>