objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Completed__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether the call is completed or not.</description>
    <label>Call Completed</label>
    <type>Checkbox</type>
</CustomField>