objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Contact__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the related Contact record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Caller List Entries</relationshipLabel>
    <relationshipName>Caller_List_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>