objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__No_of_Attempt__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__No_of_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to track how many times we tried calling on a record.</description>
    <label>No of Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>