objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Phone__c</fullName>
    <description>This field is used to store the default calling number.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>