objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Related_Record_Id__c</fullName>
    <description>This field is used to store record id on which we are creating caller list.</description>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>