objects/tdc_cti__Caller_List_Entries__c/fields/tdc_cti__S_No__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__S_No__c</fullName>
    <description>This field is used to store the serial number of a record in a CTI Dialer table.</description>
    <label>S.No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>